vlib/v/checker/tests/assign_expr_undefined_err_i.vv
fn main() {
	mut a := []int{len: 1, init: a}
	println(a)
}
